# tdf-benchmark-lab

./: .gitignore  CHANGELOG.md  CITATION.cff  INSTRUCTIONS.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: black_hole.yaml  full_pipeline.yaml  lensing.yaml  redshift.yaml  rotation_sparc.yaml  solar_system.yaml
docs/: BENCHMARK_MANIFEST.md  DATA_REQUIREMENTS.md  LCDM_COMPATIBILITY_STRATEGY.md  PAPER_APPENDIX_GUIDE.md  ROADMAP.md  SCIENTIFIC_ASSUMPTIONS.md  TEST_PLAN.md
outputs/: README.md
scripts/: parse_sparc_real_data.py  prepare_sparc_rotation.py  run_bao_sne_distance_benchmark.py  run_black_hole.py  run_black_hole_gr_benchmark.py  run_born_rule_probability.py  run_classical_metric_emergence.py  run_cmb_acoustic_benchmark.py  run_core_cusp_stress.py  run_covariant_action_checks.py  run_decoherence_tau_variance.py  run_dirac_spinor_limit.py  run_disk_kessence_rotation.py  run_entanglement_tau_geometry.py  run_full_pipeline.py  run_gr_safe_benchmark.py  run_hubble_tension_benchmark.py  run_kessence_rotation_benchmark.py  run_kessence_source_viability.py  run_lcdm_benchmark.py  run_lensing.py  run_muon_g2_anomaly.py  run_nfw_surrogate.py  run_redshift.py  run_redshift_sanity_benchmark.py  run_rotation.py  run_rotation_diversity_stress.py  run_same_tau_consistency.py  run_schrodinger_from_tdf.py  run_solar_system.py  run_sparc_5d_projection_kernel.py  run_sparc_baryon_constrained_tau_law.py  run_sparc_boundary_filtered_analysis.py  run_sparc_cored_halo_baseline.py  run_sparc_final_synthesis.py  run_sparc_galaxy_class_analysis.py  (+10 more)
(+155 files in other folders)
